src/model/snapshots/dart_typegen__model__tests__enum_simple.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [
        Enum {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Color",
                span: SourceSpan {
                    offset: SourceOffset(
                        24,
                    ),
                    length: 7,
                },
            },
            docs: None,
            annotations: None,
            extra_dart: None,
            variants: [
                EnumVariant {
                    name: SpannedScalar {
                        value: "red",
                        span: SourceSpan {
                            offset: SourceOffset(
                                44,
                            ),
                            length: 5,
                        },
                    },
                    docs: None,
                    json_value: None,
                },
                EnumVariant {
                    name: SpannedScalar {
                        value: "green",
                        span: SourceSpan {
                            offset: SourceOffset(
                                60,
                            ),
                            length: 7,
                        },
                    },
                    docs: None,
                    json_value: None,
                },
                EnumVariant {
                    name: SpannedScalar {
                        value: "blue",
                        span: SourceSpan {
                            offset: SourceOffset(
                                78,
                            ),
                            length: 6,
                        },
                    },
                    docs: None,
                    json_value: None,
                },
            ],
        },
    ],
    classes: [],
    unions: [],
}
