src/model/snapshots/dart_typegen__model__tests__postamble.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: Some(
        "\n  void someCode() {}\n",
    ),
    output: None,
    meta: None,
    defaults: None,
    enums: [],
    classes: [],
    unions: [],
}
