src/model/snapshots/dart_typegen__model__tests__preamble.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: Some(
        "\n// a comment \n",
    ),
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [],
    classes: [],
    unions: [],
}
