src/model/snapshots/dart_typegen__model__tests__type_list.snap
---
source: src/model/tests.rs
expression: ron
---
Library {
    preamble: None,
    postamble: None,
    output: None,
    meta: None,
    defaults: None,
    enums: [],
    classes: [
        Class {
            span: Span(
                0,
                0,
            ),
            name: SpannedScalar {
                value: "Foo",
                span: SourceSpan {
                    offset: SourceOffset(
                        46,
                    ),
                    length: 5,
                },
            },
            allow_non_pascal_case: None,
            fields: [
                Field {
                    name: SpannedScalar {
                        value: "x",
                        span: SourceSpan {
                            offset: SourceOffset(
                                62,
                            ),
                            length: 3,
                        },
                    },
                    ty: SpannedScalar {
                        value: "List<String>",
                        span: SourceSpan {
                            offset: SourceOffset(
                                71,
                            ),
                            length: 14,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
                Field {
                    name: SpannedScalar {
                        value: "y",
                        span: SourceSpan {
                            offset: SourceOffset(
                                94,
                            ),
                            length: 3,
                        },
                    },
                    ty: SpannedScalar {
                        value: "List<int>",
                        span: SourceSpan {
                            offset: SourceOffset(
                                103,
                            ),
                            length: 11,
                        },
                    },
                    defaults_to: None,
                    defaults_to_dart: None,
                    docs: None,
                    to_json: None,
                    from_json: None,
                    json_key: None,
                },
            ],
            docs: None,
            json_key_case: None,
            json_discriminant_value: None,
            annotations: None,
            builder_annotations: None,
            extra_dart: None,
            builder_extra_dart: None,
        },
    ],
    unions: [],
}
